chore: cd 수정 및 security 수정
1. CORS 수정
2. frontend 빌드 시 host를 넣어 이미지 생성